fixing logged in message overlap of text

--- a/code/css/style.css
+++ b/code/css/style.css
@@ -350,6 +350,7 @@ label[for="txtConfirmPassword"] {
   background: #dff0d8; 
   border: 1px solid #3c763d;
   margin-bottom: 20px;
+  margin-top: 20px;
 }
 div.alreadym {
   font-size : .8em;
